# anomatools

./: .gitignore  MANIFEST.in  README.md  _INSTRUCTIONS.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
anomatools/: __init__.py  version.py
anomatools/anomaly_detection/: BaseDetector.py  INNE.py  KNNO.py  SSDO.py  __init__.py  iForest.py  iNNe.py  kNNo.py
anomatools/clustering/: COPKMeans.py  __init__.py
anomatools/models/: __init__.py  base.py  inne.py  knno.py  ssdo.py  ssknno.py
anomatools/supervised_detection/: __init__.py
anomatools/unsupervised_detection/: __init__.py
anomatools/utils/: __init__.py  copkmeans.py  fastfuncs.py  plotting.py  utils.py  validation.py
notebooks/: SSDO_detection_example.ipynb  SSDO_test.ipynb  Semi-supervised_detection_example.ipynb  Time_series_anomaly_detection_example.ipynb  Unsupervised_detection_example.ipynb  Unsupervised_detection_test.ipynb  _development.ipynb
src/anomatools/models/: __init__.py  _base.py  _inne.py  _knno.py  _ssdo.py  _ssdo_unsup.py  _ssknno.py
src/anomatools/models/scalers/: __init__.py  _scalers.py
src/anomatools/utils/: config.py  plotting.py  utils.py  validation.py
test/: test.py
