[metadata]
name = anomatools
author = Vincent Vercruyssen
author_email = V.Vercruyssen@gmail.com
description = A compact toolbox for anomaly detection
long_description = file: README.md
version = file: VERSION.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src